Fix hr spacing

--- a/src/components/hr-with-title/hr-with-title.scss
+++ b/src/components/hr-with-title/hr-with-title.scss
@@ -12,6 +12,7 @@
 
         hr {
             border-color: white;
+            margin: 0;
         }
     }
 
